--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "postcss-import": "^13.0.0",
     "postcss-nested": "^5.0.1",
     "prop-types": "15.7.2",
+    "query-string": "^6.14.0",
     "radium": "^0.26.0",
     "rc-progress": "^3.1.0",
     "react": "^16.13.1",
