--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@deckdeckgo/highlight-code": "^2.2.2",
     "@emotion/core": "^10.0.35",
+    "@emotion/react": "^11.1.5",
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "2.4.1",
     "@mdx-deck/themes": "^4.1.0",
     "@mdx-js/mdx": "^1.6.17",
@@ -21,47 +22,47 @@
     "domino": "^2.1.6",
     "dotenv": "^8.2.0",
     "firebase": "^7.19.1",
-    "gatsby": "^2.30.1",
+    "gatsby": "^3.0.4",
     "gatsby-image": "^2.4.17",
-    "gatsby-plugin-catch-links": "^2.3.12",
+    "gatsby-plugin-catch-links": "^3.0.0",
     "gatsby-plugin-compile-es6-packages": "^2.1.0",
-    "gatsby-plugin-emotion": "^4.3.11",
+    "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-gatsby-cloud": "^2.0.0",
-    "gatsby-plugin-google-analytics": "^2.3.13",
-    "gatsby-plugin-guess-js": "^1.3.11",
-    "gatsby-plugin-image": "^0.5.1",
-    "gatsby-plugin-manifest": "2.10.0",
-    "gatsby-plugin-mdx": "^1.2.40",
-    "gatsby-plugin-mdx-embed": "0.0.17",
+    "gatsby-plugin-google-analytics": "^3.0.0",
+    "gatsby-plugin-guess-js": "^1.10.0",
+    "gatsby-plugin-image": "^1.0.1",
+    "gatsby-plugin-manifest": "3.0.0",
+    "gatsby-plugin-mdx": "^2.0.1",
+    "gatsby-plugin-mdx-embed": "0.0.19",
     "gatsby-plugin-meta-redirect": "^1.1.1",
-    "gatsby-plugin-offline": "3.2.27",
-    "gatsby-plugin-postcss": "2.3.11",
-    "gatsby-plugin-react-helmet": "^3.3.10",
-    "gatsby-plugin-react-helmet-async": "^1.1.0",
-    "gatsby-plugin-remove-trailing-slashes": "^2.3.11",
-    "gatsby-plugin-robots-txt": "^1.5.1",
-    "gatsby-plugin-sass": "^2.3.12",
-    "gatsby-plugin-sharp": "^2.12.1",
-    "gatsby-plugin-sitemap": "^2.4.12",
+    "gatsby-plugin-offline": "4.0.0",
+    "gatsby-plugin-postcss": "4.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
+    "gatsby-plugin-react-helmet-async": "^1.2.0",
+    "gatsby-plugin-remove-trailing-slashes": "^3.0.0",
+    "gatsby-plugin-robots-txt": "^1.5.5",
+    "gatsby-plugin-sass": "^4.0.2",
+    "gatsby-plugin-sharp": "^3.0.1",
+    "gatsby-plugin-sitemap": "^3.0.0",
     "gatsby-plugin-theme-switcher": "^1.0.0",
-    "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-remark-autolink-headers": "^2.3.12",
+    "gatsby-plugin-theme-ui": "^0.3.5",
+    "gatsby-remark-autolink-headers": "^3.0.0",
     "gatsby-remark-copy-images": "^0.2.1",
-    "gatsby-remark-copy-linked-files": "2.3.14",
-    "gatsby-remark-copy-relative-linked-files": "^1.0.3",
-    "gatsby-remark-highlight-code": "^2.1.1",
-    "gatsby-remark-images": "3.3.29",
+    "gatsby-remark-copy-linked-files": "3.0.0",
+    "gatsby-remark-copy-relative-linked-files": "^1.3.0",
+    "gatsby-remark-highlight-code": "^2.2.0",
+    "gatsby-remark-images": "4.0.0",
     "gatsby-remark-images-medium-zoom": "^1.7.0",
     "gatsby-remark-import-code": "^0.1.1",
     "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^2.4.13",
-    "gatsby-remark-smartypants": "^2.3.10",
-    "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-remark-responsive-iframe": "^3.0.0",
+    "gatsby-remark-smartypants": "^3.0.0",
+    "gatsby-source-filesystem": "^3.0.0",
     "gatsby-source-google-analytics-reporting-api": "^1.0.2",
-    "gatsby-transformer-json": "^2.4.11",
-    "gatsby-transformer-remark": "^2.8.34",
-    "gatsby-transformer-sharp": "^2.10.1",
+    "gatsby-transformer-json": "^3.0.0",
+    "gatsby-transformer-remark": "^3.0.0",
+    "gatsby-transformer-sharp": "^3.0.0",
     "googleapis": "^61.0.0",
     "got": "^11.7.0",
     "hhmmss": "^1.0.0",
@@ -164,11 +165,16 @@
     "eslint-loader": "4.0.2",
     "eslint-plugin-import": "2.22.0",
     "eslint-plugin-react": "7.20.6",
-    "gatsby-plugin-eslint": "2.0.8",
+    "gatsby-plugin-eslint": "3.0.0",
     "husky": "^5.0.9",
     "prettier": "2.1.1",
     "remotion": "^1.3.0",
     "tailwindcss": "^2.0.2"
+  },
+  "resolutions": {
+    "graphql": "^15.4.0",
+    "graphql-compose": "^7.25.0",
+    "webpack": "^5.24.2"
   },
   "repository": {
     "type": "git",
